# omnivelma_navigation

./: .gitignore  README.md
src/: README.md  install_omnivelma_with_dependencies.sh
src/doc/: plan_pracy
src/doc/main/: abstract.tex  bib.bib  existing.tex  goal.tex  hardware.tex  implementation.tex  kinect.xml  main.aux  main.bbl  main.bcf  main.blg  main.dvi  main.out  main.run.xml  main.tex  main.toc  software.tex  start.tex
src/gazr/: CMakeLists.txt
src/gazr/launch/: gazr.launch  gazr_profile.launch
src/gazr/src/: estimate_head_direction_ros.cpp  estimate_head_pose_from_image_or_file.cpp  facialfeaturescloud_profile.cpp  facialfeaturescloud_profile.hpp  head_pose_estimation.cpp  head_pose_estimation.hpp  head_pose_estimation_profile.cpp  head_pose_estimation_profile.hpp  main_profile.cpp  ros_head_pose_estimator_profile.cpp  ros_head_pose_estimator_profile.hpp
src/gazr/tools/: estimate_head_direction.cpp  estimate_head_profile_pose_from_image_or_file.cpp  face_landmark_detection_ex.cpp  show_head_pose.cpp  show_head_pose_profile.cpp  train_shape_predictor_ex.cpp
src/human_obstacle/: CMakeLists.txt  costmap_plugins.xml  package.xml
src/human_obstacle/cfg/: human_layer.cfg
src/human_obstacle/include/human_obstacle/: human_layer.h  human_obstacle_structures.h  obstacle_with_human_layer.h
src/human_obstacle/src/: copy  human_layer.cpp  obstacle_with_human_layer.cpp  people_merger.cpp
src/human_obstacle_msgs/: CMakeLists.txt  package.xml
src/inflated_merger/: CMakeLists.txt  costmap_plugins.xml  package.xml
src/inflated_merger/include/inflated_merger/: inflated_merger.h
src/inflated_merger/src/: inflated_merger.cpp
src/ira_laser_tools/cfg/: laserscan_multi_merger.cfg
src/object_detector/: CMakeLists.txt  package.xml
src/object_detector/include/object_detector/: object_detector.h
src/object_detector/params/: back_detector.svm  back_qr_detector.svm  front_detector.svm  nose_qr_detector.svm  nose_side_detector.svm  side_detector.svm  side_qr_detector.svm
src/object_detector/src/: object_detector.cpp
src/omnivelma/: readme.txt
src/omnivelma/devel/: .catkin  (+2 more)
src/omnivelma/src/human/: CMakeLists.txt  model.config  model.sdf  package.xml
src/omnivelma/src/human/src/: human.cpp
src/omnivelma/src/human_mover/: CMakeLists.txt  package.xml  readme.txt
src/omnivelma/src/human_mover/src/: mover.cpp
src/omnivelma_navigation/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  detectors.launch  detectors.sh  global_costmap_params.yaml  haar_detectors.launch  haar_detectors.sh  init.sh  launch.sh  local_costmap_params.yaml  move_base.launch  move_base_gmapping.launch  move_base_params.yaml  omnivelma.launch  package.xml
src/omnivelma_navigation/include/omnivelma_navigation/: kinect_follower.h
src/omnivelma_navigation/launch/: gazebo
src/omnivelma_navigation/maps/: initial_map.yaml  lab_map.yaml
src/omnivelma_navigation/src/: camera_tf_broadcaster.cpp  kinect_follower.cpp  laser_tf_broadcaster.cpp  main_controller.cpp  omnivelma_speed_broadcaster.cpp  omnivelma_tf_broadcaster.cpp
src/omnivelma_navigation/~/.vscode-root/: Cookies  Preferences  machineid  storage.json
src/omnivelma_navigation/~/.vscode-root/Backups/: workspaces.json
src/omnivelma_navigation/~/.vscode-root/Cache/: data_0  data_1  index
src/omnivelma_navigation/~/.vscode-root/CachedData/929bacba01ef658b873545e26034d1a8067445e9/: BaseRenderLayer-1adb87971305764bb0af4fb5060ae1d7.code  Browser-e166fab538d34fe4aeab9d110381724c.code  Buffer-91588b2a2475393d315cf8b309cec2c0.code  BufferSet-ab467c9364766207dfe147f0955fa8b9.code  Channel-33ade6c1568ea7f9f79d27c12e9c31d4.code  CharAtlas-e69aa8bb16f7b050b423795b0cd2edf3.code  CharMeasure-0317049de03a5a94adb276b271396c5b.code  Charsets-c866bdc52cd37d3cd15c6f65653f0e6e.code  CircularList-500b0896b938682febe67eec6154fcfa.code  Client-244ff02ef5793405f237ea6cd4e38bb1.code  ClientRequestParser-9380f734193d53e8e7f3e9d34100aa8b.code  ClientRequests-f56538b4cee91bc123d5da25a22cb82d.code  Clipboard-0ba4d728c17326e3648c951bd73fe371.code  ColorManager-c5216926c800c2b5efc034461ace5ce3.code  CompositionHelper-5e4f30f9543f1f403a151f4d746fa32e.code  Config-bc0d4244aac90a2a428a3fcb221c140d.code  Console-2d947b87ded1bb933222de127d050ed5.code  Context-6cd5ba080fe6db640870c8900bd1132c.code  Contracts-1c708bfff4da48298e393811438e7ac2.code  CursorRenderLayer-965a7b9cc3934cdba67ed5c080603476.code  EscapeSequences-8ba43da8e1d6fb9279c16b0e4a291b68.code  EventEmitter-16372d73d799e4938b84620007d8cbba.code  Exceptions-f97d3c952c04924fe3d1b45735340197.code  Generic-e2766b4778c349b8257343f58b56d935.code  GridCache-c88803c86abcb9e458158cb98635169a.code  InputHandler-bb23f3458456349e92d5ecf7322b8c57.code  LinkRenderLayer-cab3000a597ff8a065d253a479476cf4.code  Linkifier-c25b39dea2832b94b5b808442a846a79.code  Logging-25ee812df02814e04bf341acb8f5ee01.code  MouseHelper-284b46f1375c4a986f60b4863efe301d.code  MouseZoneManager-fd46651a745fdbbe5f7cd75cd5a563e2.code  Parser-d27b332bdf5086836738ebffd76ddc96.code  Performance-0730b857b67c1bb202635547f728145b.code  Renderer-dc77e30b3ed68dbbe82a91c55f4cdd05.code  RequestParser-319844322a56803af63bd5d9d28293cb.code  RequestResponseHeaders-f7af450ecc1e40a7bc71a2124317b6dd.code  SearchHelper-b7445dffc18acfbd5623241b8a444389.code  SelectionManager-9e1cdc3abf0d031cb10219c7eb7c2877.code  SelectionModel-828678ee07d7a685f7d5fdbae6099023.code  SelectionRenderLayer-39de1ea5bc075b3810074d24bda49590.code  (+58 more)
src/omnivelma_navigation/~/.vscode-root/GPUCache/: data_1  index
src/omnivelma_navigation/~/.vscode-root/Local Storage/: file__0.localstorage
src/omnivelma_navigation/~/.vscode-root/User/workspaceStorage/520728e39917044167548c8242b5f65b/ms-vscode.cpptools/: .browse.VC.db-shm
src/opencv2_catkin/: CMakeLists.txt  package.xml  readme.txt
src/opencv3_catkin/: CMakeLists.txt  readme.txt
src/openni_launch/: readme.txt
src/openni_tracker-hydro-devel/: openni_tracker.xml
src/people/body_detector/: CMakeLists.txt  package.xml
src/people/body_detector/src/: body_detector.cpp
src/wu_ros_tools/: readme.txt
(+163 files in other folders)
