<?xml version="1.0"?>
<package>
  <name>opencv2_catkin</name>
  <version>0.0.1</version> 
  <description>opencv2_catkin</description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <run_depend>cmake_modules</run_depend>

</package>
