<package format="2">
	<name>human_mover</name>
	<version>1.0.0</version>
	<description>?</description>
	
	<maintainer email="within12@gmail.com">Totalq</maintainer>
	
	<license>GPLv3</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>std_msgs</depend>
    <depend>roscpp</depend>
	<depend>geometry_msgs</depend>
	<depend>tf</depend>
	<depend>cv_bridge</depend>
	<depend>sensor_msgs</depend>
	<depend>image_transport</depend>

	 <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
